tests/snapshots/notebook_test__test_drop_empty_cells_cli_text.snap
---
source: tests/notebook_test.rs
expression: output.stdout.to_str().unwrap()
---
tests/e2e_notebooks/test_drop_empty_cells.ipynb:cell: 2: Found cell to be dropped
tests/e2e_notebooks/test_drop_empty_cells.ipynb:cell: 3: Found cell to be dropped
tests/e2e_notebooks/test_drop_empty_cells.ipynb:cell: 4: Found cell to be dropped
tests/e2e_notebooks/test_drop_empty_cells.ipynb:cell 0: Found cell with output
tests/e2e_notebooks/test_drop_empty_cells.ipynb:cell 0: Found cell with execution count
