tests/snapshots/notebook_test__test_execution_timing_cfg_json.snap
---
source: tests/notebook_test.rs
expression: output.stdout.to_str().unwrap()
---
[
  {
    "path": "tests/e2e_notebooks/test_execution_timing.ipynb",
    "type": "ClearOutput",
    "cell_number": 0
  },
  {
    "path": "tests/e2e_notebooks/test_execution_timing.ipynb",
    "type": "ClearCount",
    "cell_number": 0
  },
  {
    "path": "tests/e2e_notebooks/test_execution_timing.ipynb",
    "type": "CellStripMeta",
    "cell_number": 0,
    "extra_key": "cell.metadata.execution"
  }
]
